# cloakaml

./: .envrc  .gitignore  .gitmodules  .ocamlformat  LICENSE  README.md  cloakaml.opam  dune-project  shell.nix
.github/workflows/: deploy-docs.yml
_old/live/: data.ml  round.ml
_old/setup/: distribution.ml  dune  setup.ml
doc/: dune  index.html  index.mld
docs/: index.html
docs/Abilities/: index.html
docs/Abilities/AbilityMap/: index.html
docs/Abilities/Query/: index.html
docs/Ability/: index.html
docs/Ability/Make/: index.html
docs/Ability/module-type-S/: index.html
docs/Data/: index.html
docs/Game/: index.html
docs/Game/Abilities/: index.html
docs/Game/Data/: index.html
docs/Game/Debug/: index.html
docs/Live/: index.html
docs/Meta/: index.html
docs/Mode/: index.html
docs/Modes/: index.html
docs/Of_role/: index.html
docs/Phase/: index.html
docs/Player/: index.html
docs/Players/: index.html
docs/Role/: index.html
docs/Roles/: index.html
docs/Round/: index.html
docs/Rounds/: index.html
docs/Server/: index.html
docs/Setup/: index.html
docs/Spec/: index.html
docs/Trigger/: index.html
docs/Types/: index.html
docs/Utils/: index.html
lib/: cloakaml.ml  dune
lib/_roles/: dune  roles.ml  scourge.ml
lib/_turn/: turn.ml
lib/alignment/: alignment.ml  dune
lib/game/: abilities.ml  ability.ml  dune  game.ml  neighbours.ml  phase.ml  player.ml  players.ml  players.mli  roles.ml  roles.mli  round.ml  rounds.ml  setup.ml
lib/game/abilities/: abilities.ml  ability_map.ml  dune  query.ml
lib/game/abilities/ability/: ability.ml  dune  sig.ml  types.ml
lib/game/abilities/ability/of_role/: dune  of_role.ml  sig.ml
lib/game/abilities/ability/trigger/: dune  kind.ml  trigger.ml
lib/game/live/: abilities.ml  data.ml  dune  live.ml  live_abilities.ml  live_round.ml
lib/game/meta/: dune  meta.ml
lib/game/meta/abilities/: abilities.ml  ability_map.ml  dune  query.ml
lib/game/meta/abilities/ability/: ability.ml  dune  sig.ml  types.ml
lib/game/meta/abilities/ability/of_role/: dune  of_role.ml  sig.ml
lib/game/meta/abilities/ability/trigger/: dune  kind.ml  trigger.ml
lib/game/meta/players/: dune  map.ml  neighbours.ml  players.ml
lib/game/meta/players/player/: dune  knowledge.ml  player.ml  status.ml
lib/game/meta/players/player/roles/: dune  group.ml  map.ml  roles.ml
lib/game/meta/players/player/roles/role/: alignment.ml  dune  kind.ml  role.ml
lib/game/meta/rounds/: dune  phase.ml  round.ml  rounds.ml
lib/game/mode/: dune  mode.ml
lib/game/mode/spec/: data.ml  dune  enum_map.ml  enum_type.ml  group.ml  spec.ml  term.ml
lib/game/mode/spec/abilities/: abilities.ml  ability.ml  dune
lib/game/mode/spec/abilities/triggers/: dune  kind.ml  trigger.ml  triggers.ml
lib/game/mode/spec/group/: dune  group.ml  kind.ml
lib/game/mode/spec/id/: dune  id.ml
lib/game/mode/spec/index/: dune  index.ml
lib/game/mode/spec/players/: dune  index.ml  knowledge.ml  player.ml  players.ml  selector.ml  status.ml
lib/game/mode/spec/players/player/: dune  knowledge.ml  player.ml  status.ml
lib/game/mode/spec/players/player/knowledge/: dune  knowledge.ml
lib/game/mode/spec/roles/: alignment.ml  dune  group.ml  kind.ml  role.ml  roles.ml
lib/game/mode/spec/roles/group/: group.ml
lib/game/mode/spec/roles/role/: alignment.ml  dune  kind.ml  role.ml
lib/game/mode/spec/roles/role/group/: dune  group.ml  kind.ml
lib/game/mode/spec/rounds/: data.ml  dune  kind.ml  phase.ml  round.ml  rounds.ml
lib/game/mode/spec/rounds.ml/: dune  phase.ml  round.ml  rounds.ml
lib/game/mode/spec/rounds/round/: dune  round.ml
lib/game/mode/spec/rounds/round/data/: data.ml  dune  phase.ml
lib/game/phase/: dune
lib/game/player/: dune  knowledge.ml  player.ml  status.ml
lib/game/player/roles/: alignment.ml  dune  kind.ml  role.ml  roles.ml
lib/game/players/: dune  map.ml  neighbours.ml  players.ml
lib/game/players/player/: dune  knowledge.ml  player.ml  status.ml
lib/game/players/player/roles/: alignment.ml  dune  group.ml  kind.ml  map.ml  role.ml  roles.ml
lib/game/players/player/roles/role/: alignment.ml  dune  kind.ml  role.ml
lib/game/rounds/: dune  phase.ml  round.ml  rounds.ml
lib/game/rounds/round/: dune  phase.ml  round.ml
lib/game/server/: dune  eserver.erl  server.ml
lib/game/setup/: dune  setup.ml
lib/game/spec/: dune  enum_map.ml  enum_type.ml  spec.ml  term.ml
lib/game/spec/abilities/: abilities.ml  dune
lib/game/spec/abilities/ability/: ability.ml  dune
lib/game/spec/abilities/ability/triggers/: dune  triggers.ml
lib/game/spec/abilities/ability/triggers/trigger/: dune  kind.ml  trigger.ml
lib/game/spec/id/: dune  id.ml
lib/game/spec/players/: dune  players.ml  selector.ml
lib/game/spec/players/player/: dune  player.ml  status.ml
lib/game/spec/players/player/knowledge/: dune  knowledge.ml
lib/game/spec/roles/: dune  roles.ml
lib/game/spec/roles/group/: dune  group.ml  kind.ml
lib/game/spec/roles/role/: alignment.ml  dune  kind.ml  role.ml
lib/game/spec/rounds/: dune  rounds.ml
lib/game/spec/rounds/round/: dune  round.ml
lib/game/spec/rounds/round/data/: data.ml  dune  phase.ml
lib/game/system/: dune  system.ml
lib/modes/: dune  modes.ml
lib/modes/blood_on_the_clocktower/: alignment.ml  blood_on_the_clocktower.ml  dune  kind.ml  role.ml
lib/modes/blood_on_the_clocktower/the_abilities/: dune  the_abilities.ml
lib/modes/blood_on_the_clocktower/the_players/: dune  status.ml  the_players.ml
lib/modes/blood_on_the_clocktower/the_roles/: alignment.ml  dune  kind.ml  role.ml  the_roles.ml
lib/modes/blood_on_the_clocktower/the_rounds/: dune  phase.ml  the_rounds.ml
lib/modes/blood_on_the_clocktower/the_triggers/: dune  kind.ml  the_triggers.ml  trigger.ml
lib/player/: dune  player.ml
lib/roles/: dune  roles.ml  scourge.mli
lib/server/: dune  eserver.erl  server.ml
lib/utils/: cata.ml  dune  selector.ml  todo.ml  utils.ml
lobby/: LICENSE.md  README.md  rebar.config
lobby/src/: lobby.app.src  lobby_app.erl  lobby_sup.erl
test/: dune
(+143 files in other folders)
