(library
 (name game)
 (public_name cloakaml.game)
 (preprocess
  (pps ppx_deriving.std))
 (libraries 
 cloakaml.game.phase
 cloakaml.game.player
 cloakaml.game.players
 cloakaml.game.rounds
 cloakaml.game.abilities
 cloakaml.game.live)
 (modules
  ; roles
  ; phase
  ; player
  ; neighbours
  ; players
  ; round
  ; ability
  ; abilities
  ; rounds
  setup
  ; live_round
  game)
 (wrapped true))

(include_subdirs no)
