(library
 (name abilities)
 (public_name cloakaml.game.abilities)
 (preprocess
  (pps ppx_deriving.std))
 (libraries
  cloakaml.game.players
  cloakaml.game.rounds.phase
  cloakaml.game.rounds.round
  cloakaml.game.abilities.ability)
 (modules query ability_map abilities)
 (wrapped true))

(include_subdirs no)
