(library
 (name phase)
 (public_name cloakaml.game.rounds.phase)
 (preprocess
  (pps ppx_deriving.std))
 (modules phase)
 (wrapped true))

(library
 (name rounds)
 (public_name cloakaml.game.rounds)
 (preprocess
  (pps ppx_deriving.std))
 (libraries
  cloakaml.game.rounds.phase
  cloakaml.game.players
  cloakaml.game.rounds.round)
 (modules rounds)
 (wrapped true))

(include_subdirs no)
