(library
 (name server)
 (public_name cloakaml.game.server)
 (preprocess
  (pps ppx_deriving.std))
 (libraries unix)
 (modules server)
 (wrapped true))

(rule
 (target eserver.beam)
 (deps eserver.erl)
 (action
  (chdir
   %{workspace_root}/lib/game/server
   (run erlc %{deps}))))

(include_subdirs no)
