(library
 (name term)
 (public_name cloakaml.game.spec.term)
 (preprocess
  (pps ppx_deriving.std))
 (modules term)
 (wrapped true))

(library
 (name enum_type)
 (public_name cloakaml.game.spec.enum_type)
 (preprocess
  (pps ppx_deriving.std))
 (libraries cloakaml.game.spec.term)
 (modules enum_type)
 (wrapped true))

(library
 (name enum_map)
 (public_name cloakaml.game.spec.enum_map)
 (preprocess
  (pps ppx_deriving.std))
 (libraries cloakaml.game.spec.term cloakaml.game.spec.enum_type)
 (modules enum_map)
 (wrapped true))

(library
 (name spec)
 (public_name cloakaml.game.spec)
 (preprocess
  (pps ppx_deriving.std))
 (libraries
  cloakaml.game.spec.term
  cloakaml.game.spec.enum_type
  cloakaml.game.spec.enum_map
  cloakaml.game.spec.role
  cloakaml.game.spec.roles.group
  cloakaml.game.spec.roles
  cloakaml.game.spec.players
  cloakaml.game.spec.rounds
  cloakaml.game.spec.abilities)
 (modules spec)
 (wrapped true))

(include_subdirs no)
