(library
 (name types)
 (public_name cloakaml.game.abilities.ability.types)
 (preprocess
  (pps ppx_deriving.std))
 (libraries cloakaml.game.rounds cloakaml.game.abilities.ability.trigger)
 (modules types)
 (wrapped true))

(library
 (name ability)
 (public_name cloakaml.game.abilities.ability)
 (preprocess
  (pps ppx_deriving.std))
 (libraries
  cloakaml.game.players
  cloakaml.game.rounds
  cloakaml.game.abilities.ability.trigger
  cloakaml.game.abilities.ability.types
  cloakaml.game.abilities.ability.of_role)
 (modules sig ability)
 (wrapped true))

(include_subdirs no)
