(library
 (name abilities)
 (public_name cloakaml.game.meta.abilities)
 (preprocess
  (pps ppx_deriving.std))
 (libraries
  cloakaml.utils
  cloakaml.game.meta.players
  cloakaml.game.meta.rounds.phase
  cloakaml.game.meta.rounds.round
  cloakaml.game.meta.abilities.ability)
 (modules query ability_map abilities)
 (wrapped true))

(include_subdirs no)
