(library
 (name enum_type)
 (public_name cloakaml.game.mode.spec.enum_type)
 (preprocess
  (pps ppx_deriving.std))
 (modules enum_type)
 (wrapped true))

(library
 (name enum_map)
 (public_name cloakaml.game.mode.spec.enum_map)
 (preprocess
  (pps ppx_deriving.std))
 (libraries cloakaml.game.mode.spec.enum_type)
 (modules enum_map)
 (wrapped true))

(library
 (name data)
 (public_name cloakaml.game.mode.spec.data)
 (preprocess
  (pps ppx_deriving.std))
 (libraries
  cloakaml.game.mode.spec.enum_type
  cloakaml.game.mode.spec.enum_map
  cloakaml.game.mode.spec.abilities.triggers)
 (modules data)
 (wrapped true))


(library
 (name spec)
 (public_name cloakaml.game.mode.spec)
 (preprocess
  (pps ppx_deriving.std))
 (libraries
  cloakaml.game.mode.spec.enum_type
  cloakaml.game.mode.spec.enum_map
  cloakaml.game.mode.spec.data
  cloakaml.game.mode.spec.roles
  cloakaml.game.mode.spec.abilities)
 (modules group spec)
 (wrapped true))

(include_subdirs no)
