(library
 (name phase)
 (public_name cloakaml.game.rounds.round.phase)
 (preprocess
  (pps ppx_deriving.std))
 (modules phase)
 (wrapped true))

(library
 (name round)
 (public_name cloakaml.game.rounds.round)
 (preprocess
  (pps ppx_deriving.std))
 (libraries cloakaml.game.rounds.round.phase cloakaml.game.players)
 (modules round)
 (wrapped true))

(include_subdirs no)
