(library
 (name the_abilities)
 (public_name cloakaml.modes.blood_on_the_clocktower.the_abilities)
 (preprocess
  (pps ppx_deriving.std))
 (libraries
  cloakaml.game.mode
  cloakaml.modes.blood_on_the_clocktower.the_rounds
  cloakaml.modes.blood_on_the_clocktower.the_roles
  cloakaml.modes.blood_on_the_clocktower.the_triggers)
 (modules the_abilities)
 (wrapped true))

(include_subdirs no)
