(library
 (name of_role)
 (public_name cloakaml.game.abilities.ability.of_role)
 (preprocess
  (pps ppx_deriving.std))
 (libraries
  cloakaml.utils
  cloakaml.game.player
  cloakaml.game.players
  cloakaml.game.phase
  cloakaml.game.rounds.round
  cloakaml.game.abilities.ability.trigger
  cloakaml.game.abilities.ability.types)
 (modules sig of_role)
 (wrapped true))

(include_subdirs no)
