(library
 (name players)
 (public_name cloakaml.game.mode.spec.players)
 (preprocess
  (pps ppx_deriving.std))
 (libraries
  cloakaml.game.mode.spec.enum_type
  cloakaml.game.mode.spec.enum_map
  cloakaml.game.mode.spec.roles
  cloakaml.game.mode.spec.role.group)
 (modules index status knowledge player players)
 (wrapped true))

(include_subdirs no)
