(library
 (name roles)
 (public_name cloakaml.game.mode.spec.roles)
 (preprocess
  (pps ppx_deriving.std))
 (libraries
  cloakaml.game.mode.spec.enum_type
  cloakaml.game.mode.spec.enum_map
  cloakaml.game.mode.spec.role
  cloakaml.game.mode.spec.role.group)
 (modules roles)
 (wrapped true))

(include_subdirs no)
