(library
 (name rounds)
 (public_name cloakaml.game.mode.spec.rounds)
 (preprocess
  (pps ppx_deriving.std))
 (libraries
  cloakaml.game.mode.spec.enum_type
  cloakaml.game.mode.spec.enum_map
  cloakaml.game.mode.spec.roles
  cloakaml.game.mode.spec.players)
 (modules phase round data rounds)
 (wrapped true))

(include_subdirs no)
