(library
 (name ability)
 (public_name cloakaml.game.spec.abilities.ability)
 (preprocess
  (pps ppx_deriving.std))
 (libraries
  cloakaml.game.spec.enum_type
  cloakaml.game.spec.enum_map
  cloakaml.game.spec.round.data
  cloakaml.game.spec.roles
  cloakaml.game.spec.abilities.ability.triggers)
 (modules ability)
 (wrapped true))

(include_subdirs no)
