
(library
 (name player)
 (public_name cloakaml.game.spec.player)
 (preprocess
  (pps ppx_deriving.std))
 (libraries
  cloakaml.game.spec.enum_type
  cloakaml.game.spec.enum_map
  cloakaml.game.spec.roles
  cloakaml.game.spec.roles.group
  cloakaml.game.spec.id
  cloakaml.game.spec.player.knowledge)
 (modules status player)
 (wrapped true))

(include_subdirs no)
