(library
 (name round)
 (public_name cloakaml.game.spec.round)
 (preprocess
  (pps ppx_deriving.std))
 (libraries
  cloakaml.game.spec.enum_type
  cloakaml.game.spec.enum_map
  cloakaml.game.spec.roles
  cloakaml.game.spec.players
  cloakaml.game.spec.round.data)
 (modules round)
 (wrapped true))

(include_subdirs no)
