(library
 (name player)
 (public_name cloakaml.game.mode.spec.player)
 (preprocess
  (pps ppx_deriving.std))
 (libraries
  cloakaml.game.mode.spec.enum_type
  cloakaml.game.mode.spec.enum_map
  cloakaml.game.mode.spec.roles
  cloakaml.game.mode.spec.role.group
  cloakaml.game.mode.spec.index)
 (modules status knowledge player)
 (wrapped true))

(include_subdirs no)
